<resources>
    <string name="app_name">新课程表</string>
    <string name="app_course_empty">空空如也，要不安排一下？</string>
    <string name="app_week_monday">周一</string>
    <string name="app_week_tuesday">周二</string>
    <string name="app_week_wednesday">周三</string>
    <string name="app_week_thursday">周四</string>
    <string name="app_week_friday">周五</string>
    <string name="app_week_saturday">周六</string>
    <string name="app_week_sunday">周日</string>
    <string name="app_dialog_subject">科目：</string>
    <string name="app_dialog_classroom">教室：</string>
    <string name="app_dialog_course_name">课程名：</string>
    <string name="app_dialog_day">日期：</string>
    <string name="app_dialog_start_time">开始时间：</string>
    <string name="app_dialog_end_time">结束时间：</string>
    <string name="app_dialog_teacher">老师：</string>
    <string name="app_dialog_tackle">用具：</string>
    <string name="app_dialog_ps">选填</string>
    <string name="app_dialog_cancel">取消</string>
    <string name="app_dialog_confirm">确认</string>
    <string name="app_dialog_save">保存</string>
    <string name="app_dialog_delete">删除</string>
    <string name="app_title_skin">换肤</string>
    <string name="app_title_add">添加</string>
    <string name="app_notification_tackle_empty">要带好所需用具</string>
    <string name="app_notification_tackle_head">带上</string>
    <string name="app_notification_tackle_tail">出发吧！</string>
    <string name="app_notification_title">知识的大门即将开启：</string>

</resources>
