<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <android.support.constraint.ConstraintLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:background="@drawable/app_edit_dialog_fragment_dialog_normal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_edit_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/app_dialog_subject"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_subject"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_subject" />

        <EditText
            android:id="@+id/et_edit_subject"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@id/tv_edit_subject"
            app:layout_constraintRight_toRightOf="@+id/v_subject_and_classroom"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <View
            android:id="@+id/v_subject_and_classroom"
            android:layout_width="1dp"
            android:layout_height="34dp"
            android:layout_marginTop="13dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_edit_classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_dialog_classroom"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_subject"
            app:layout_constraintLeft_toLeftOf="@id/v_subject_and_classroom"
            app:layout_constraintTop_toTopOf="@id/et_edit_subject"

            />

        <EditText
            android:id="@+id/et_edit_classroom"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_edit_classroom"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_edit_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/app_dialog_course_name"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_course_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_course_name" />

        <EditText
            android:id="@+id/et_edit_course_name"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            android:clickable="true"
            app:layout_constraintLeft_toRightOf="@id/tv_edit_course_name"
            app:layout_constraintRight_toRightOf="@+id/v_class_name_and_day"
            app:layout_constraintTop_toBottomOf="@id/et_edit_subject" />

        <View
            android:id="@+id/v_class_name_and_day"
            android:layout_width="1dp"
            android:layout_height="34dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_day" />

        <TextView
            android:id="@+id/tv_edit_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_dialog_day"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_day"
            app:layout_constraintLeft_toLeftOf="@id/v_class_name_and_day"
            app:layout_constraintTop_toTopOf="@id/et_edit_day" />

        <EditText
            android:id="@+id/et_edit_day"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_edit_day"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_subject" />

        <TextView
            android:id="@+id/tv_edit_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/app_dialog_start_time"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_start_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_start_time" />

        <EditText
            android:id="@+id/et_edit_start_time"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            android:clickable="true"
            app:layout_constraintLeft_toRightOf="@id/tv_edit_start_time"
            app:layout_constraintRight_toRightOf="@+id/v_start_time_and_end_time"
            app:layout_constraintTop_toBottomOf="@id/et_edit_course_name" />

        <View
            android:id="@+id/v_start_time_and_end_time"
            android:layout_width="1dp"
            android:layout_height="34dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_day" />

        <TextView
            android:id="@+id/tv_edit_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_dialog_end_time"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_end_time"
            app:layout_constraintLeft_toLeftOf="@id/v_start_time_and_end_time"
            app:layout_constraintTop_toTopOf="@id/et_edit_end_time" />

        <EditText
            android:id="@+id/et_edit_end_time"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_edit_end_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_course_name" />

        <TextView
            android:id="@+id/tv_edit_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/app_dialog_teacher"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_teacher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_teacher" />

        <EditText
            android:id="@+id/et_edit_teacher"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@id/tv_edit_teacher"
            app:layout_constraintRight_toRightOf="@+id/v_teacher_and_ps"
            app:layout_constraintTop_toBottomOf="@id/et_edit_start_time" />

        <View
            android:id="@+id/v_teacher_and_ps"
            android:layout_width="1dp"
            android:layout_height="34dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_edit_teacher" />

        <TextView
            android:id="@+id/tv_edit_ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/app_dialog_tackle"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/et_edit_tackle"
            app:layout_constraintLeft_toLeftOf="@id/v_teacher_and_ps"
            app:layout_constraintTop_toTopOf="@id/et_edit_tackle" />

        <EditText
            android:id="@+id/et_edit_tackle"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/app_edti_et_dialog_normal"
            android:gravity="start"
            android:hint="@string/app_dialog_ps"
            android:inputType="text"
            android:lines="1"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_edit_ps"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_start_time" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_add"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_teacher">

            <TextView
                android:id="@+id/tv_add_cancel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/app_dialog_cancel"
                android:textColor="@color/app_dialog_et_and_tv_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/v_cancle_and_confirm"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_cancle_and_confirm"
                android:layout_width="1dp"
                android:layout_height="23dp"
                android:background="@color/app_v_bg_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_add_confirm"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/app_dialog_confirm"
                android:textColor="@color/app_dialog_et_and_tv_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/v_cancle_and_confirm"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_edit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_teacher">

            <TextView
                android:id="@+id/tv_edit_cancle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="取消"
                android:textColor="@color/app_dialog_et_and_tv_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/v_cancle_and_delete"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_cancle_and_delete"
                android:layout_width="1dp"
                android:layout_height="23dp"
                android:background="@color/app_v_bg_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_edit_cancle"
                app:layout_constraintRight_toLeftOf="@id/tv_edit_delect"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_edit_delect"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="删除"
                android:textColor="@color/app_dialog_et_and_tv_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/v_cancle_and_delete"
                app:layout_constraintRight_toLeftOf="@id/v_delete_and_save"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_delete_and_save"
                android:layout_width="1dp"
                android:layout_height="23dp"
                android:background="@color/app_v_bg_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_edit_delect"
                app:layout_constraintRight_toLeftOf="@+id/tv_edit_save"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_edit_save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="保存"
                android:textColor="@color/app_dialog_et_and_tv_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/v_delete_and_save"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>


